--- a/css/newTab.css
+++ b/css/newTab.css
@@ -119,7 +119,7 @@ padding: 0px 50px;
 .footer-top-left li:not(:last-child) {
   border-right: 1px solid rgb(87, 87, 87);
 }
-.footer-top-left li
+.footer-top-left li, .footer-top-left li a
 {
   color: var(--Shade-100, #000);
 font-family: Roboto;
@@ -128,6 +128,7 @@ font-style: normal;
 font-weight: 500;
 line-height: 34px; /* 200% */
 padding: 0px 16px;
+text-decoration: none;
 
 }
 .footer-top-right span{
@@ -138,4 +139,36 @@ font-style: normal;
 font-weight: 500;
 line-height: 34px; /* 200% */
 
+}
+.privacy-link-sec{
+  margin: 27px 0px;
+  display: flex;
+  gap: 18px;
+}
+.privacy-link-sec span{
+  color: #212121;
+
+font-family: Roboto;
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: 34px; /* 170% */
+
+}
+.privacy-link-sec a{
+  text-decoration: none;
+}
+.privary-row-items  a{
+  color: #00A3FF;
+}
+.privary-row-items  p{
+  font-family: Roboto;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+}
+.privary-row-items p span{
+  display: block;
+  color: #00A3FF;
 }
