--- a/css/newTab.css
+++ b/css/newTab.css
@@ -172,3 +172,88 @@ line-height: 30px;
   display: block;
   color: #00A3FF;
 }
+@media (max-width: 600px) {
+
+.exten-contentfull-content
+{
+  flex-direction: column-reverse;
+}
+.exten-content-top-left {
+  color: var(--Shade-100, #000);
+font-family: "IBM Plex Serif";
+font-size: 24px;
+font-style: normal;
+font-weight: 600;
+line-height: 30px; /* 125% */
+text-align: center;
+}
+.exten-con-left  , .exten-con-right{
+  width: 100%;
+}
+.exten-con-right {
+  margin-top: 30px;
+}
+.exten-content-full{
+  padding: 0px 16px;
+  height: auto;
+}
+.exten-con-left h3{
+  color: #000;
+/* Heading 04/H4/Small/Semibold */
+/* font-family: Poppins; */
+font-size: 34px;
+font-style: normal;
+font-weight: 600;
+line-height: 46px; /* 135.294% */
+
+}
+.exten-con-left p{
+  color: #000;
+/* Paragraph 02/Regular */
+/* font-family: Poppins; */
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 187.5% */
+
+}
+.exten-con-left button{
+  padding: 0px 20px;
+  font-size: 15px;
+  margin-bottom: 40px;
+
+}
+.extension-footer-top{
+  display: block;
+}
+.footer-top-left{
+  border-bottom: 1px solid #E8E8E8;
+    padding-bottom: 10px;
+}
+.footer-top-right {
+  padding: 20px 0px;
+  text-align: center;
+  color: var(--Shade-100, #000);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+}
+.footer-top-right span{
+  color: var(--Shade-100, #000);
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+}
+.privary-row-items p {
+
+margin-bottom: 30px;
+}
+.privary-row-items p{
+  color: #171A23;
+  font-family: Roboto;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+}
