--- a/css/newTab.css
+++ b/css/newTab.css
@@ -24,6 +24,39 @@ body {
   z-index: -1;
   object-fit: cover;
 }
+.top-header-sec-text {
+  color: var(--Shade-100, #000);
+  font-family: Roboto;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 30px; /* 75% */
+  text-align: center;
+  margin-bottom: 48px;
+}
+.terms-of-service-row .header-row-text {
+  color: var(--Shade-100, #000);
+  font-family: Roboto;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 30px; /* 93.75% */
+  margin-bottom: 20px;
+}
+.terms-of-service-row {
+  margin-bottom: 48px;
+}
+.terms-of-service-row p {
+  color: #171a23;
+
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 150% */
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
 .exten-content-full {
   padding: 0px 50px;
   height: 100vh;
